Changelog of flooding
===================================================


1.91 (unreleased)
-----------------

- Nothing changed yet.


1.90 (2013-09-09)
-----------------

- Updates:
    flooding-base to 1.40
      - Update smartclient to v9.0.
      - Add speed control button for animations
    flooding-lib to 2.92
      - Update templates to use smartclient v9.0.


1.89 (2013-08-14)
-----------------

- Updates
    flooding-base to 1.38
        Set projection to maplayer in config.js.


1.88 (2013-07-16)
-----------------

- Fix supervisor task call.


1.87 (2013-07-16)
-----------------

- Scedule tasks calculate_province_statistics_cronjob to run at 6:01 and 
  create_province_excel_script at 6:30 daily.


1.86 (2013-07-15)
-----------------

- Unpinned flooding-lib. We got tired of keeping it up to date and
  updating these CHANGES. See the latest version of flooding-lib.


1.85 (2013-07-12)
-----------------

- Updates
    flooding-lib to 2.87
        - Cache the province a Scenario belongs to. Cache a province's
          scenario statistics.
	- Correctly create ROR approval Excel sheets for each province.
        - Don't generate them from the view if they already exist.
        - (In flooding) call the script each hour.
	- Fix error 'To many open files' by exporttool.

    flooding-base to 1.38
        - Fix OpenStreetMap layer.

1.84.2 (2013-07-10)
-------------------

- Nothing changed yet.


1.84.1 (2013-07-10)
-------------------

- Fix typo in supervisor command name


1.84 (2013-07-10)
-----------------

- Flooding-lib to 2.86 for:
    - Correctly create ROR approval Excel sheets for each province.
    - Don't generate them from the view if they already exist.
- Call the ROR Excel script every hour



1.83 (2013-07-08)
-----------------

- Flooding-lib to 2.85: added some caches to speed up the ROR
  dashboard page.  Also added a cronjob that runs every hour, using
  supervisor to make sure it doesn't start overlapping with itself.

